--- a/store/src/app/components/menu-bar/menu-bar.component.html
+++ b/store/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,19 @@
-<p>menu-bar works!</p>
+<div class="menu-bar-container">
+
+    <div class="menu-bar-logo">
+        <img src="assets/logoPlay.png" 
+            alt="" 
+            srcset="" 
+            width="140px" 
+            height="40px">
+    </div>
+
+    <div class="menu-bar-item">
+        <ul>
+            <li><a href="">Youtube</a></li>
+            <li><a href="">Linkedin</a></li>
+            <li><a href="">Github</a></li>
+        </ul>
+    </div>
+
+</div>
