--- a/store/src/app/pages/home/home.component.html
+++ b/store/src/app/pages/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+<div class="home-container">
+
+    <app-card
+        cardImage="assets\jogo-battlife5.jpg"
+        gameLabel="DIGITAL"
+        gameType="DIGITAL | PS4"
+        gamePrice="R$ 199,99"
+    >
+    </app-card>
+    <!--assim eu consigo enchergar o gameLbel do meu conponent pai e utilizar para enviar dados para home dinamicamente-->
+    <app-card
+        cardImage="assets\jogo-battlife5.jpg"
+        gameLabel="EXCLUSIVO"
+        gameType="DIDC | PS5"
+        gamePrice="R$ 540,99"
+    >
+    </app-card>
+
+</div>
+
