--- a/store/src/app/components/card/card.component.html
+++ b/store/src/app/components/card/card.component.html
@@ -1,1 +1,14 @@
-<p>card works!</p>
+<a href=""class="card-container">
+
+    <img class="card-img" [src]=[cardImage] alt="" srcset="">
+    <!--esse gameLabel repassa a propriedade de sua subcomponent para ser visivel fora do card-->
+    <app-card-label 
+        gameLabel="{{gameLabel}}">
+    </app-card-label>
+
+    <app-card-price 
+        gameType="{{gameType}}"
+        gamePrice="{{gamePrice}}"> 
+    </app-card-price>
+
+</a>
