--- a/store/src/app/components/menu-bar/menu-bar.component.html
+++ b/store/src/app/components/menu-bar/menu-bar.component.html
@@ -1,19 +1,23 @@
-<div class="menu-bar-container">
+<div class="menu-bar-global">
 
-    <div class="menu-bar-logo">
-        <img src="assets/logoPlay.png" 
-            alt="" 
-            srcset="" 
-            width="140px" 
-            height="40px">
+    <div class="menu-bar-row">
+        <div class="menu-bar-logo">
+            <img src="assets/logoPlayr.png" alt="" srcset="" width="140px" height="40px">
+        </div>
+        <div class="menu-search">
+            <app-search></app-search>
+        </div>
     </div>
 
-    <div class="menu-bar-item">
-        <ul>
-            <li><a href="">Youtube</a></li>
-            <li><a href="">Linkedin</a></li>
-            <li><a href="">Github</a></li>
-        </ul>
-    </div>
+    <div class="menu-bar-container">
 
+        <div class="menu-bar-item">
+            <ul>
+                <li><a href="">Youtube</a></li>
+                <li><a href="">Linkedin</a></li>
+                <li><a href="https://github.com/N0vais">Github</a></li>
+            </ul>
+        </div>
+
+    </div>
 </div>
