--- a/store/src/app/pages/home/home.component.html
+++ b/store/src/app/pages/home/home.component.html
@@ -1,20 +1,119 @@
 <div class="home-container">
+    <h1>Saúde nos dias de hoje...</h1>
+    <div class="home-container__paragrafo">
+        
+        <p class="__paragrafo">
+            A alimentação do ser humano é extremamente variada e diversificada. O ser humano é capaz de ingerir 
+            uma grande variedade de alimentos, desde alimentos de origem animal, como carne, ovos e laticínios, 
+            até alimentos de origem vegetal, como frutas, legumes, grãos e sementes. Além disso, o ser humano 
+            também consome alimentos processados, como massas, pães, bolos e biscoitos. A variedade de alimentos 
+            que o ser humano consome é tão grande que é possível encontrar praticamente todos os tipos de nutrientes 
+            necessários para manter a saúde. Além disso, o ser humano também consome alimentos como café, chá, 
+            refrigerantes e bebidas alcoólicas.
+        </p>
+        <br>
+        <p class="__paragrafo">
+            Todos esses produtos, mais ou menos preparados, dão origem aos diversos tipos de alimentos que se encontram no comércio.
+        </p>
+        <br>
+        <p class="__paragrafo">
+            O fato de podermos comer essa variedade de alimentos, significaria que todos eles são igaualmente apropiados
+            paa o consumo humano?
+        </p>
+        <br>
+        <p class="__paragrafo">
+            Existiria uma alimentação especifivamente adequada para os seres humanos que, além de nutrir, conserve a sáude e evite doenças? 
+        </p>
+    </div>
 
     <app-card
-        cardImage="assets\jogo-battlife5.jpg"
-        gameLabel="DIGITAL"
-        gameType="DIGITAL | PS4"
-        gamePrice="R$ 199,99"
+        cardImage="assets\fruta-uva.jpg"
+        gameLabel="UVAS"
+        gameType="FRUTAS"
+        gamePrice=""
+    >
+    </app-card>
+    <app-card
+        cardImage="assets\vegetais-cenoura.jpg"
+        gameLabel="CENOURA"
+        gameType="VEGETAIS"
+        gamePrice=""
     >
     </app-card>
     <!--assim eu consigo enchergar o gameLbel do meu conponent pai e utilizar para enviar dados para home dinamicamente-->
     <app-card
-        cardImage="assets\jogo-battlife5.jpg"
-        gameLabel="EXCLUSIVO"
-        gameType="DIDC | PS5"
-        gamePrice="R$ 540,99"
+        cardImage="assets\horta-alface.jpg"
+        gameLabel="ALFACE"
+        gameType="HORTALIÇAS"
+        gamePrice=""
     >
     </app-card>
+
+    <!--segundo slid-->
+
+    <h1>O desiquilibrio da saúde...</h1>
+    <div class="home-container__paragrafo">
+        
+        <p class="__paragrafo">
+            A má alimentação pode levar a um desequilíbrio na saúde devido ao consumo excessivo de alimentos ricos 
+            em gorduras, açúcares e sal, ou ao consumo insuficiente de nutrientes essenciais. Isso pode levar a 
+            problemas de saúde como obesidade, doenças cardíacas, diabetes, pressão alta, doenças ósseas, problemas 
+            digestivos e outros. Além disso, a má alimentação também pode afetar o humor, a energia e o desempenho 
+            mental.
+        </p>
+        <br>
+            <p class="__paragrafo">
+                Toda essas questões de desiquilibrio da saúde, envolve a venda de alimentos ricos em gorduras, açúcares 
+                e sal, que contribuem para o desequilíbrio da saúde.
+            </p>
+        <br>
+        <p class="__paragrafo">
+            Muitas vezes, comemos alimentos prejudiciais à saúde porque são mais baratos, mais fáceis de encontrar e 
+            mais saborosos do que os alimentos saudáveis. Além disso, muitas vezes, não temos tempo para preparar 
+            alimentos saudáveis, o que nos leva a optar por alimentos mais práticos, mas menos saudáveis. Por fim, 
+            muitas vezes, não temos conhecimento sobre os benefícios de uma alimentação saudável, o que nos leva a 
+            optar por alimentos menos saudáveis.
+        </p>
+        <br>
+        <p class="__paragrafo">
+            O que fazermos para nos livrar dos alimentos causadores do desiquilibrio da saúde ? 
+        </p>
+    </div>
+
+    <app-card
+        cardImage="assets\fast-food.jpg"
+        gameLabel="LANCHES"
+        gameType="FAST-FOOD"
+        gamePrice=""
+    >
+    </app-card>
+    <app-card
+        cardImage="assets\gorduraTrans.jpg"
+        gameLabel="GULOSEIMAS"
+        gameType="INDUSTRIAIS"
+        gamePrice=""
+    >
+    </app-card>
+   <app-card
+        cardImage="assets\alcool.jpg"
+        gameLabel="BEBIDAS"
+        gameType="ALCOLISMO"
+        gamePrice=""
+    >
+    </app-card>
+
+        <h1>Saúde é inevitavel, então, está esperando o que ... </h1>
+    <div class="home-container__paragrafo">
+        
+    <p class="__paragrafo">
+        Existe uma alimentação específica para os seres humanos que pode nutrir, conservar a saúde e prevenir 
+        doenças. Esta alimentação é conhecida como dieta saudável. Uma dieta saudável consiste em comer uma 
+        variedade de alimentos saudáveis, como frutas, vegetais, grãos integrais, laticínios com baixo teor de 
+        gordura, carnes magras, peixes, ovos, nozes e sementes. Além disso, é importante limitar o consumo de 
+        alimentos processados, açúcares e gorduras saturadas. Esta dieta também inclui o consumo de água em 
+        abundância, pois ajuda a manter o corpo hidratado e a eliminar toxinas.
+    </p>
+    </div>
 
 </div>
 
