--- a/store/src/app/components/card/card-price/card-price.component.html
+++ b/store/src/app/components/card/card-price/card-price.component.html
@@ -1,6 +1,6 @@
 <div class="card-price-container">
     <div class="card-price-title">
-        <h3>Play it now!</h3>
+        <h3>Saiba mais!</h3>
     </div>
     <div class="card-price-value">
 
