--- a/store/src/app/components/menu-bar/menu-bar.component.css
+++ b/store/src/app/components/menu-bar/menu-bar.component.css
@@ -1,14 +1,31 @@
+.menu-bar-global{
+    width: 100%;
+    position: fixed;
+    z-index: 999;
+    background: rgb(22,85,85);
+    background: linear-gradient(90deg,
+     rgba(22,85,85,1) 0%, 
+     rgba(240,167,10,0.9780287114845938) 35%,
+     rgba(22,85,85,1) 100%);
+    border: 1px solid #000;
+    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
+}
+.menu-bar-row{
+    display: flex;
+    justify-content: space-between;
+}
+
 .menu-bar-container{
     width: 100%;
     height: 60px;
-    margin: 5px auto;
     display: flex;
     flex-direction: row;
-    position: fixed;
-    z-index: 999;
-    background-color: #fff;
-    border: 1px solid #000;
-    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
+   margin-top: 5px;
+   background: rgb(10, 59, 59);
+   background: linear-gradient(90deg,
+    rgb(9, 51, 51) 0%, 
+    rgba(148, 106, 16, 0.978) 35%,
+    rgba(9,51,51,1) 100%);
 }
 .menu-bar-logo{
     margin-left: 30px;
@@ -36,6 +53,11 @@
     padding: 10px;
 }
 .menu-bar-item > ul > li > a:hover{
-    color: rgb(22,85,85);
+    color: rgb(190, 211, 211);
     font-weight: 300;
+}
+.menu-search{
+    display: flex;
+    justify-content: right;
+
 }
