--- a/store/src/styles.css
+++ b/store/src/styles.css
@@ -9,6 +9,7 @@ body{
     background: rgb(22,85,85);
     background: linear-gradient(90deg,
      rgba(22,85,85,1) 0%, 
-     rgba(240,167,10,0.9780287114845938) 35%,
+     rgba(240, 238, 233, 0.978) 35%,
      rgba(22,85,85,1) 100%);
 }
+
