--- a/store/src/app/pages/home/home.component.html
+++ b/store/src/app/pages/home/home.component.html
@@ -113,7 +113,9 @@
         alimentos processados, açúcares e gorduras saturadas. Esta dieta também inclui o consumo de água em 
         abundância, pois ajuda a manter o corpo hidratado e a eliminar toxinas.
     </p>
+    
     </div>
+    <h2 class="__title">Aguarde para mais conteudo.......</h2>
 
 </div>
 
