--- a/store/src/app/components/menu-bar/menu-bar.component.css
+++ b/store/src/app/components/menu-bar/menu-bar.component.css
@@ -7,7 +7,6 @@
      rgba(22,85,85,1) 0%, 
      rgba(240,167,10,0.9780287114845938) 35%,
      rgba(22,85,85,1) 100%);
-    border: 1px solid #000;
     box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
 }
 .menu-bar-row{
@@ -20,9 +19,9 @@
     height: 60px;
     display: flex;
     flex-direction: row;
-   margin-top: 5px;
-   background: rgb(10, 59, 59);
-   background: linear-gradient(90deg,
+    margin-top: 5px;
+    background: rgb(10, 59, 59);
+    background: linear-gradient(90deg,
     rgb(9, 51, 51) 0%, 
     rgba(148, 106, 16, 0.978) 35%,
     rgba(9,51,51,1) 100%);
@@ -59,5 +58,22 @@
 .menu-search{
     display: flex;
     justify-content: right;
-
+}
+@media screen and (max-width: 600px){
+    .menu-bar-row{
+        display: flex;
+       flex-direction: column;
+       height: auto;
+    }
+    .menu-bar-container{
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        position: relative;
+    }
+    .menu-bar-item > ul{
+        display: flex;
+        flex-direction: column;
+        font-size: 25px;
+    }
 }
