--- a/store/src/app/components/menu-bar/menu-bar.component.html
+++ b/store/src/app/components/menu-bar/menu-bar.component.html
@@ -13,9 +13,13 @@
 
         <div class="menu-bar-item">
             <ul>
-                <li><a href="">Youtube</a></li>
-                <li><a href="">Linkedin</a></li>
-                <li><a href="https://github.com/N0vais">Github</a></li>
+                <li><a href="https://github.com/N0vais" target="_blank">Github</a></li>              
+                <li><a href="https://br.linkedin.com/in/daniel-novais-dos-santos-siqueira-296a81236" target="_blank">Linkedin</a></li>
+                <li><a href="https://www.youtube.com/@solsiqueirai7317" target="_blank">Youtube</a></li>
+                <li><a href="#" >Frutas</a></li>              
+                <li><a href="#" >Legumes</a></li>
+                <li><a href="#" >Hortaliças</a></li>
+                
             </ul>
         </div>
 
