--- a/store/src/app/components/menu-bar/search/search.component.css
+++ b/store/src/app/components/menu-bar/search/search.component.css
@@ -4,16 +4,41 @@
     padding: 5px;
     margin-right: 10px;
     margin-top: 10px;
-    border-radius: 30px;
+    border-radius: 10px;
     background-color: #fff;
-
+    display: flex;
+    align-items: center;
+    border: 1px solid #212923;
   }
 
   .search-menu > input{
     margin-left: 10px;
+    margin-right: 30px;
     color: #212923;
     width: 80%;
     height: 35px;
     
+  }
+  img{
+    cursor: pointer;
+    min-width: 100%;
+      min-height:100%;
+      transition: transform .8s;
+  }
+
+  img:hover{
+    border: 1px solid #212923;
+    transform:scale(1.1);
+  }
+  
+  input:focus {
+    box-shadow: 0 0 0 0;
+    outline: 0;
+  }
+
+  @media screen and (max-width: 600px){
+    .search-menu {
+      width: auto;
+    }
   }
   
