--- a/store/src/app/components/menu-bar/search/search.component.html
+++ b/store/src/app/components/menu-bar/search/search.component.html
@@ -1,4 +1,4 @@
 <div class="search-menu">
     <input class="input-search" type="text" placeholder="Busque um tema...">
-    <button type="submit">Pesquisar</button>
+    <button type="submit"><img src="assets/icon/lupa.png" alt="Pesquisar" srcset=""></button>
   </div>
