--- a/store/src/app/pages/home/home.component.css
+++ b/store/src/app/pages/home/home.component.css
@@ -17,3 +17,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
 }
+
+@media screen and (max-width: 600px){
+    .home-container > h1{margin-top:400px ;}
+}
